# invenio-edugain

./: .editorconfig  .gitignore  CHANGES.md  CHANGES.rst  README.md  README.rst  pyproject.toml  run-js-linter.sh  run-tests.sh
.github/actions/pre-install/: action.yml
.github/workflows/: github-actions-demo.yml  tests.yml
invenio_edugain/: __init__.py  cli.py  config.py  ext.py  ingest.py  jobs.py  models.py  tasks.py  utils.py  views.py  webpack.py
invenio_edugain/alembic/: 1742217918_create_invenio_edugain_branch.py  1742382925_create_invenio_edugain_tables.py  1764593266_update_idp_table.py  __init__.py
invenio_edugain/assets/semantic-ui/js/invenio_edugain/: discovery.js
invenio_edugain/assets/semantic-ui/less/invenio_edugain/: disco_service.less
invenio_edugain/assets/semantic-ui/shibboleth-embedded-ds-1.3.0/: Makefile  idpselect.css  idpselect.js  idpselect_config.js  index.html  shibboleth-ds.conf
invenio_edugain/assets/semantic-ui/shibboleth-embedded-ds-1.3.0/nonminimised/: idpselect.js  idpselect_config.js  idpselect_languages.js  json2.js  typeahead.js
invenio_edugain/assets/semantic-ui/shibboleth-embedded-ds-1.4.0/: RELEASE-NOTES.txt
invenio_edugain/assets/semantic-ui/shibboleth-embedded-ds-1.4.0/nonminimised/: idpselect.js  idpselect_config.js  idpselect_languages.js  typeahead.js
invenio_edugain/build_config/: __init__.py  pysaml2.py  pysaml2_core.py  shibboleth.py  utils.py
invenio_edugain/templates/semantic-ui/invenio_edugain/: login_discovery.html
invenio_edugain/translations/: messages.pot
tests/: conftest.py  test_alembic.py  test_ingestion.py  test_invenio_edugain.py  test_shibboleth_eds.py
tests/build_config/: __init__.py  saml_config.py  test_pysaml2.py
