[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
description = "Invenio extension for login via edugain."
name = "invenio-edugain"
authors = [
  {name = "Graz University of Technology", email = "info@tugraz.at"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["invenio", "edugain"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "invenio_db>=2.0.0,<3.0.0",
  "pysaml2>=7.5.0",
]

[project.optional-dependencies]
tests = [
  "invenio-app>=2.0.0,<3.0.0",
  "invenio-db[postgresql]>=2.0.0,<3.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=3.0.0",
  "ruff>=0.9.6",
]

[project.entry-points."invenio_db.models"]
invenio_edugain = "invenio_edugain.models"

[project.urls]
Repository = "https://github.com/tu-graz-library/invenio-edugain"


[tool.hatch.build]
exclude = [
  "run-tests.sh",
  "tests/**",
]

[tool.hatch.version]
path = "invenio_edugain/__init__.py"


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "--black --cov=invenio_edugain --cov-report=term-missing"
live_server_scope = "module"
testpaths = "tests invenio_edugain"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203", "D211", "D212", "D213",
  "E501",
  "FA100", "FA102",
  "FIX002",
  "INP001",
  "N999",
  "PERF203",
  "PLR0913",
  "S101",
  "TD002", "TD003",
  "TID252",
  "UP009",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "ANN201",
]
